--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
   /* display: flex; */
   justify-content: center;
   align-items: center;
-  border: 2px solid green;
+  /* border: 2px solid green; */
+  background-color: rgb(26, 26, 59);
   padding: 10px;
   overflow: hidden;
 }
@@ -22,7 +23,61 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
+  background-color: rgb(66, 66, 92);
   padding: 10px;
 }
 
+.dropdown, .token-gallery-container {
+  background-color: darkkhaki;
+  margin-bottom: 20px;
+}
+
+.token-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  padding: 5px;
+  gap: 10px;
+  background-color: darkkhaki;
+}
+
+.token-item {
+  background-color: rgba(66, 66, 92, 0.6);
+  padding: 10px;
+  display: flex;
+  /* flex: 1; */
+  flex-direction: row;
+  align-items: center;
+  position: relative;
+}
+
+.token-image {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+}
+
+.token-info {
+  display: flex;
+  /* flex: 1; */
+  flex-direction: row;
+  align-items: center;
+  margin-top: 2px;
+  width: 100%;
+}
+
+.token-info span {
+  margin-bottom: 5px;
+  padding: 2px 5px;
+
+}
+
+.token-info button {
+  padding: 2px 5px;
+  /* width: 30px; */
+  position: absolute;
+  right: 10px; /* Distance from the right margin */
+  top: 50%; /* Vertically center the button */
+  transform: translateY(-50%); /* Adjust vertical centering */
+}
